--- a/static/css/user_profile.css
+++ b/static/css/user_profile.css
@@ -12,13 +12,23 @@
 .section_A {
 
 	display:block;
-	position:absolute;
+	position:relative;
 	top:122px;
 	height: 1000px;
 	width: 1340px;
+	z-index: 0;
 	
 }
 
+.section_back{
+
+	position: absolute;
+    height: 370px;
+	width: 1340;
+	z-index: 0;
+	top: 0px;
+	background-color:#00758F;
+}
 
 
 
@@ -26,10 +36,11 @@
 
 
 .section1 {
-	position: relative;
+	position: static;
 	float: left;
-	height: 1200px;
+	height: 1000px;
 	width: 335px;
+	z-index: 1;
 }
 
 #profile_image {
@@ -49,11 +60,12 @@
 
 
 .section2 {
-	position: relative;
+	position: static;
 	float: right;
-	height: 1200px;
+	height: 1000px;
 	width: 1005px;
-	
+	z-index: 1;
+
 }
 
 
@@ -86,7 +98,7 @@
 	width: 300px;
 	font-size: 40px;
 	font-family: cursive;
-	color:black;
+	color:white;
 }
 
 .userlocation {
@@ -97,6 +109,7 @@
 	font-size: 10px;
 	font-weight:bold;
 	font-family: cursive;
+	color: white;
 }
 
 .userprofession {
@@ -108,6 +121,7 @@
 	font-size: 15px;
 	font-weight: bold;
 	font-family: cursive;
+	margin-top: 8px;
 }
 
 
@@ -163,6 +177,7 @@
 	font-size:30px;
 	font-family:'Modern No. 20';
 	text-align:center;
+	color: white;
 }
 
 
@@ -196,6 +211,13 @@
 	margin-right:20px;
 }
 
+.sisimg{
+
+    height:15px;
+    width:15px;
+    margin-right: 5px;
+}
+
 .user_detail {
 	position: absolute;
 	height: 600px;
@@ -223,7 +245,6 @@
 	width: 700px;
 	margin-left: 85px;
 	z-index: 3;
-	background-color: rgb(0, 255, 21);
 }
 
 .tabcontent {
