--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -2,7 +2,9 @@
 {% block body_block %}
 {% load static %}
 <!DOCTYPE html>
-
+   
+       <link rel="stylesheet" type="text/css" href="{% static 'css/user_profile.css' %}">
+       <link rel="stylesheet" type="text/css" href="{% static 'css/w3.css' %}">
 
  <div class="section_A ">
 
