--- a/templates/Feedback.html
+++ b/templates/Feedback.html
@@ -5,53 +5,19 @@
 <head>
     <title>Feedback</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.min.css' %}">
+  
+   <link rel="stylesheet" type="text/css"  href="{% static 'css/style1.css'%}">
+   <link rel="stylesheet" type="text/css" href="{% static 'css/w3.css' %}">
+
 
 </head>
+
 <body>
 
+   
 
-    <div class="divform" id="fd">
-        <!--Feedback Form-->
-        <form class="form" style="left:300px;" action="accounts/register">
-            <h3 class="li formfont">Feedback</h3>
-            <br>
-            <div id="fdiv1">
-                Name:
-                <input class="name" type="text" placeholder="First">
-                <input class="name" type="text" placeholder="Last">
-            </div>
-            <br>
-            <div id="fdiv2">
-                Country:
-                <select class="name" id="select">
-                    <option>...</option>
-                    <option>India</option>
-                    <option>USA</option>
-                    <option>Russia</option>
-                    <option>Canada</option>
-                    <option>France</option>
-                    <option>Israil</option>
-                </select>
-            </div>
-            <br>
-            <div id="fdiv3">
-                Email:
-                <input class="name" type="email" placeholder="type" id="select">
-            </div>
-            <br>
-            <br>
-            <input type="submit" value="OK" id="fsubmit">
-<textarea id="fdiv4">Some text...</textarea>
-        </form>
-    </div>
 
-<image style="height:100px; width:100px;" src="{{request.user.userinfo.profile_img.url}}">
 
+   
 </body>
 </html>
