--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
 
         <div id="dnav1">
 
-            <a id="lis2"><span id="s2"><i style="color:lime;font-size:32px;">Q</i>uantum LAB</span></a>
-            <a class="li" href="feedback"><span class="lispan">Feedback</span></a>
+            <a href="{% url 'homepage:home' %}" id="lis2"><span id="s2"><i style="color:lime;font-size:32px;">Q</i>uantum LAB</span></a>
+            <a class="li" href="{% url 'accounts:feedback'%}"><span class="lispan">Feedback</span></a>
             <a class="li"><span class="lispan">About</span></a>
             <a class="li"><span class="lispan">Services</span></a>
             <a class="li"><span class="lispan">Contact</span></a>
@@ -55,13 +55,24 @@
             <a href="#" class="user_icon_bar_a"><img src="{% static 'png/039-dropbox.png' %}" class="iconimg"></a>
             <a href="#" class="user_icon_bar_a"><img src="{% static 'png/021-chat.png' %}" class="iconimg"></a>
             <a href="#" class="user_icon_bar_a"><img src="{% static 'png/048-notification.png' %}" class="iconimg"></a>
-            <a href="#" class="user_icon_bar_a"><img src="{% static 'png/035-user.png' %}" class="iconimg"></a>
+            <a href="{% url 'homepage:edit' %}" class="user_icon_bar_a"><img src="{% static 'png/035-user.png' %}" class="iconimg"></a>
 
             <div id="user_icon">
-                <span id="user_name">Hello!, {{user.first_name}}</span>
-                <a href="{% url 'accounts:details' user.id %}"><img src="{{request.user.profileimages.propic.url}}" class="user_icon_image"></a>
+                
+                <div id="user_icon1">
+                 <span id="user_name">Hello!, {{user.first_name}}</span>
+                 <a href="{% url 'accounts:details' user.id %}"><img src="{{request.user.profileimages.propic.url}}" class="user_icon_image"></a>
+                </div> 
+
+               <a href="{% url 'accounts:logout'%}"><div id="user_icon2">LOGOUT</div></a>
+
             </div>
+
         </div>
+
+
+
+
         {% endif %}
 
     </nav>
@@ -76,15 +87,12 @@
         <br>
         <br>
         <div id="d1"></div>
-
-        {% if user.is_authenticated %}
-        <a href="{% url 'accounts:logout'%}"><button class=" lir1">LOGOUT</button></a>
-
-        {% else %}
+       
+        {% if not user.is_authenticated %} 
 
         <div id="logreg">
 
-            <a class="ar1" href="accounts/register"><button class="r1" id="r1">SIGN IN</button></a>
+            <a class="ar1" href="accounts/register"><button class="r1" id="r1">SIGN UP</button></a>
 
             <div class="login">
                 <div class="login_pop" id="login_pop">
@@ -162,94 +170,7 @@
 
     
 
-    <div class="divform" id="fd2">
-        <!--Contact Form-->
-        <div class="form" style="height:400px; width:800px;">
-            <br>
-
-            <div id="con_div_1" class="con_sec_frame" style="display:block;background:#9999ff;">
-                <!-- contact section1-->
-                <span style="font-size:50px; font-family:Segoe UI,Arial,sans-serif; font-weight:bold; position:relative;left:200px;top:10px;"> Contact Us</span>
-                <br>
-                <span style="position:relative;left:120px;top:30px;font-size:35px;">We will get back to you asap!</span>
-                <div class="con_elem_a" onclick="contactswipe1()"><span style="font-size:50px; position:relative; left:170px;">Next</span></div>
-            </div>
-
-            <div id="con_div_2" class="con_sec_frame">
-                <!--contact section2 name-->
-                <span class="con_span_top" style="font-size:25px;color:black;position:relative;left:250px;top:10px;">Full Name</span>
-                <br>
-                <br>
-                <br>
-                <input class="inputstyle1" type="text" placeholder="First Name">
-                <br>
-                <input class="inputstyle1" type="text" placeholder="Last Name">
-                <div style="top:5px;" class="con_sec_bottom"><button onclick="contactswipe4r()" class="con_b_btm_left"><span class="con_span_bottom" style="left:-70px;">Previous</span></button><button onclick="contactswipe2()" class="con_b_btm_right"><span class="con_span_bottom">Next</span></button></div>
-            </div>
-
-            <div id="con_div_3" class="con_sec_frame">
-                <!-- contact section3 email-->
-                <span style="top:30px;left:280px;" class="con_span_top">Email</span>
-                <input style="top:100px;left:30px;" class="inputstyle1" type="email" placeholder="Email">
-                <div class="con_sec_bottom"><button onclick="contactswipe3r()" class="con_b_btm_left"><span class="con_span_bottom" style="left:-70px;">Previous</span></button><button onclick="contactswipe3()" class="con_b_btm_right"><span class="con_span_bottom">Next</span></button></div>
-            </div>
-
-            <div id="con_div_4" class="con_sec_frame">
-                <!-- contact section4 phone-->
-                <span style="top:30px;left:255px;" class="con_span_top">Phone Number</span>
-                <input style="top:100px;left:-45px;" class="inputstyle1" type="number" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-                <div class="con_sec_bottom"><button onclick="contactswipe2r()" class="con_b_btm_left"><span class="con_span_bottom" style="left:-70px;">Previous</span></button><button onclick="contactswipe4()" class="con_b_btm_right"><span class="con_span_bottom">Next</span></button></div>
-            </div>
-
-            <div id="con_div_5" class="con_sec_frame" style="background:#9999ff;">
-                <!-- contact section5 submit-->
-                <span style="font-size:45px; font-family:Segoe UI,Arial,sans-serif; font-weight:bold; position:relative;left:200px;top:30px;">Thankyou</span>
-                <span style="position:relative;float:center;top:80px;right:100px;font-size:20px;">You may also call us at +91-9999999999</span>
-                <div class="con_sec_bottom"><button onclick="contactswipe1r()" class="con_b_btm_left"><span class="con_span_bottom" style="left:-70px;">Previous</span></button><button onclick="" class="con_b_btm_right"><span class="con_span_bottom">Submit</span></button></div>
-            </div>
-
-
-            <script>
-
-<!--    forward-- ->
-                    function contactswipe1() {
-                        document.getElementById('con_div_2').classList.toggle("swipecontactbar")
-                    };
-
-                function contactswipe2() {
-                    document.getElementById('con_div_3').classList.toggle("swipecontactbar")
-                };
-
-                function contactswipe3() {
-                    document.getElementById('con_div_4').classList.toggle("swipecontactbar")
-                };
-
-                function contactswipe4() {
-                    document.getElementById('con_div_5').classList.toggle("swipecontactbar")
-                };
-
-< !--backward--->
-
-                    function contactswipe1r() {
-                        document.getElementById('con_div_5').classList.toggle("swipecontactbar")
-                    };
-
-                function contactswipe2r() {
-                    document.getElementById('con_div_4').classList.toggle("swipecontactbar")
-                };
-
-                function contactswipe3r() {
-                    document.getElementById('con_div_3').classList.toggle("swipecontactbar")
-                };
-
-                function contactswipe4r() {
-                    document.getElementById('con_div_2').classList.toggle("swipecontactbar")
-                };
-
-            </script>
-
-        </div>
-    </div><!---end-->
+   
     <!---------------///////////////////////////////-------------------------------------------------------------------------------------------->
 
     <div class="section_content" style="background-color: rgb(246, 248, 250);height:500px;">
