--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             <a href="{% url 'homepage:home' %}" id="lis2"><span id="s2"><i style="color:lime;font-size:32px;">Q</i>uantum LAB</span></a>
             <a class="li" href="{% url 'accounts:feedback'%}"><span class="lispan">Feedback</span></a>
             <a class="li"><span class="lispan">About</span></a>
-            <a class="li"><span class="lispan">Services</span></a>
+            <a class="li" href="{% url 'blog:post_list' %}"><span class="lispan">Blogs</span></a>
             <a class="li"><span class="lispan">Contact</span></a>
 
             <div class="dropdivnav">
