--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,9 @@
+.flex-container {
+  
+    display: flex;
+    
+    flex-direction: column;
+  }
 
 .centerstage{
     margin-left: auto;
@@ -14,7 +20,7 @@
 }
 
 .postcontent{
-    height:600px;
+    height:auto;
     width: 100%;
 
 }
@@ -25,3 +31,44 @@
     width:100%;
 
 }
+
+.not_approved_comment{
+    color:lightseagreen;
+}
+
+.navbarsticky{
+    position:fixed;
+    top:0;
+    z-index: 1;
+
+}
+
+.column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 8px;
+  }
+
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+  .commentdate{
+    font-size: 8px;
+
+  }
+
+  .approveimg{
+    height: 20px;
+    width: 20px;
+
+  }
