--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<nav class='w3-bar'>
+<nav class='w3-bar navbarsticky'>
 
         <div class="w3-container w3-half w3-black s6 w3-left">
           <a href="{% url 'blog:post_list' %}" class="w3-bar-item w3-button">Home</a>
@@ -40,18 +40,12 @@
         {% endif %}
 </nav>
 
+<br>
+<br>
 
-<div class="w3-container">
-    <div class="w3-row">
-        <div class="w3-col m8">
-            <div class="blog_posts">
-                {% block content %}
-                {% endblock %}
-            </div>
-        </div>        
-    </div>
-</div>
-
+{% block content %}
+{% endblock %}
+           
 
 </body>
 </html>
