--- a/blog/templates/post_list.html
+++ b/blog/templates/post_list.html
@@ -2,27 +2,22 @@
 {% block content %}
 
 
-{% for post in posts %}
-
-<div class="w3-row-padding w3-margin-top">
-  <a href="{% url 'blog:post_detail' pk=post.pk %}">
-<div class="w3-half">
-    <div class="w3-card">
-    {% if post.postimage %} <img src="{{post.postimage.url}}" style="width:100%"> {% endif %}     
+<div class="row">
+  {% for post in posts %}
+  <div class="column">
+    <a href="{% url 'blog:post_detail' pk=post.pk %}" style="text-decoration:none;">
+    <div class="card">
+      {% if post.postimage %} <img src="{{post.postimage.url}}" style="width:100%"> {% endif %}
       <div class="w3-container">
-        <h1>{{ post.title }}</h1>
+        <h2>{{ post.title }}</h2>
         <p>Published on: {{post.published_date|date:"D M Y"}}</p>
-        <p>{{post.text|truncatechars:200}}</p> 
-      Comments: {{ post.approve_comments.count }}
+        <p>{{post.text|truncatechars:200}}</p>
+        Comments: {{ post.approve_comments.count }}
       </div>
-    </div>
-  </div></a>
+    </div></a>
+  </div>
+  {% endfor %}
 </div>
-
-<br>
-
-{% endfor %}
-
 
 
 {% endblock %}
